--- a/resources/config/config_nltcs_local.ini
+++ b/resources/config/config_nltcs_local.ini
@@ -43,7 +43,7 @@ ip4 = 134.93.217.39
 port = 42140
 name = Manager
 latency = 0
-spn_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn
+spn_file_path = ../resources/input/nltcs/4_clients/spn
 
 
 [ID_1]
@@ -54,10 +54,10 @@ name = Member_1
 latency = 0
 private_evaluation = False
 private_evaluation_amount_lines_to_evaluate = 1
-private_data_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/private_data_1.in
-spn_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn
-spn_weights_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn_weights_1
-private_data_for_evaluation_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/private_data_for_evaluation_1.in
+private_data_file_path = ../resources/input/nltcs/4_clients/private_data_1.in
+spn_file_path = ../resources/input/nltcs/4_clients/spn
+spn_weights_file_path = ../resources/input/nltcs/4_clients/spn_weights_1
+private_data_for_evaluation_file_path = ../resources/input/nltcs/4_clients/private_data_for_evaluation_1.in
 saving_checkpoints_file_path = ../resources/input/nltcs/4_clients/ckpts_1
 global_data_for_evaluation_file_path =  ../resources/input/nltcs/4_clients/global_data_for_evaluation.in
 
@@ -69,10 +69,10 @@ name = Member_2
 latency = 0
 private_evaluation = False
 private_evaluation_amount_lines_to_evaluate = 4
-private_data_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/private_data_2.in
-spn_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn
-spn_weights_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn_weights_2
-private_data_for_evaluation_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/private_data_for_evaluation_2.in
+private_data_file_path = ../esources/input/nltcs/4_clients/private_data_2.in
+spn_file_path = ../resources/input/nltcs/4_clients/spn
+spn_weights_file_path = ../resources/input/nltcs/4_clients/spn_weights_2
+private_data_for_evaluation_file_path = ../resources/input/nltcs/4_clients/private_data_for_evaluation_2.in
 saving_checkpoints_file_path = ../resources/input/nltcs/4_clients/ckpts_1
 global_data_for_evaluation_file_path =  ../resources/input/nltcs/4_clients/global_data_for_evaluation.in
 
@@ -84,10 +84,10 @@ name = Member_3
 latency = 0
 private_evaluation = False
 private_evaluation_amount_lines_to_evaluate = 4
-private_data_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/private_data_3.in
-spn_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn
-spn_weights_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn_weights_3
-private_data_for_evaluation_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/private_data_for_evaluation_3.in
+private_data_file_path = ../resources/input/nltcs/4_clients/private_data_3.in
+spn_file_path = ../resources/input/nltcs/4_clients/spn
+spn_weights_file_path = ../resources/input/nltcs/4_clients/spn_weights_3
+private_data_for_evaluation_file_path =../resources/input/nltcs/4_clients/private_data_for_evaluation_3.in
 saving_checkpoints_file_path = ../resources/input/nltcs/4_clients/ckpts_3
 global_data_for_evaluation_file_path =  ../resources/input/nltcs/4_clients/global_data_for_evaluation.in
 
@@ -99,9 +99,9 @@ name = Member_4
 latency = 0
 private_evaluation = False
 private_evaluation_amount_lines_to_evaluate = 4
-private_data_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/private_data_4.in
-spn_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn
-spn_weights_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/spn_weights_4
-private_data_for_evaluation_file_path = /home/heilmann/Dokumente/PaperRAT-SPNForests/PPSL-SPN_implementation/resources/input/nltcs/4_clients/private_data_for_evaluation_4.in
+private_data_file_path = ../resources/input/nltcs/4_clients/private_data_4.in
+spn_file_path = ../resources/input/nltcs/4_clients/spn
+spn_weights_file_path = ../resources/input/nltcs/4_clients/spn_weights_4
+private_data_for_evaluation_file_path = ../resources/input/nltcs/4_clients/private_data_for_evaluation_4.in
 saving_checkpoints_file_path = ../resources/input/nltcs/4_clients/ckpts_4
 global_data_for_evaluation_file_path =  ../resources/input/nltcs/4_clients/global_data_for_evaluation.in
